trying to fix tiled background on mobile phones

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5,6 +5,7 @@
 				background-size: cover;
 				background-position: right top;
 				background-attachment: fixed;
+				z-index: -10;
 				color: black;
 			}
 			header {
